# shapefile

./: shapefile.cabal
src/Database/: Shapefile.hs
src/Database/Shapefile/: Misc.hs  ShapeTypes.hs  Shapes.hs  Shp.hs  Shx.hs
src/Database/Shapefile/Points/: ByParts.hs
src/Database/Shapefile/Shapes/: ByParts.hs  Class.hs  MultiPatchPartTypes.hs  MultiPoint.hs  Null.hs  OneToOne.hs  Point.hs  Poly.hs
src/Database/Shapefile/Shapes/MultiPatchParts/: ByParts.hs
src/Database/Shapefile/Shp/: ByParts.hs  Handle.hs  OneToOne.hs  Raw.hs
src/Database/Shapefile/Shx/: Handle.hs
